--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arribos a Cedis — v7.7.1-stable</title>
+  <title>Arribos a Cedis</title>
   <style>
     :root{
       --bg:#0b0f14;
@@ -194,7 +194,6 @@
             <th data-key="cuenta">Cuenta</th>
             <th data-key="cedis">Cedis</th>
             <th data-key="status">Estatus</th>
-            <th data-key="fecha">Fecha</th>
             <th data-key="indicacion">Indicación</th>
             <th data-key="anden">Andén</th>
             <th data-key="arribo_at">Arribo</th>
@@ -465,17 +464,6 @@
     return `${y}-${m}-${day}`;
   }
 
-  function fmtYMD(ymdStr){
-    if(!ymdStr) return '';
-    if(ymdStr instanceof Date) ymdStr = ymd(ymdStr);
-    if(typeof ymdStr === 'string'){
-      if(ymdStr.includes('T')) ymdStr = ymdStr.slice(0,10);
-      return ymdStr.replace(/-/g,'/');
-    }
-    return '';
-  }
-
-
   function fmtTime(iso){
     if(!iso) return '';
     const d = new Date(iso);
@@ -692,7 +680,6 @@
     {key:'cuenta', label:'Cuenta'},
     {key:'cedis', label:'Cedis'},
     {key:'status', label:'Estatus'},
-    {key:'fecha', label:'Fecha'},
     {key:'indicacion', label:'Indicación'},
     {key:'anden', label:'Andén'},
     {key:'arribo_at', label:'Arribo'},
@@ -745,8 +732,8 @@
   }
 
   // ------------------- Sorting -------------------
-  let sortKey = 'arribo_at';
-  let sortDir = -1;
+  let sortKey = 'folio';
+  let sortDir = 1;
 
   function cmp(a,b){
     const k = sortKey;
@@ -813,9 +800,6 @@
     if(row.is_deleted) return false;
     const today = ymd();
     if(work === today){
-      // En HOY: muestra lo de hoy + pendientes (activos) de días previos,
-      // pero NO muestra liberados de días anteriores.
-      if(row.arribo_ymd !== work && row.status === 'LIBERADO') return false;
       return row.arribo_ymd === work || !!row.is_active;
     }
     return row.arribo_ymd === work;
@@ -911,14 +895,13 @@
 
     renderKPIs(rows);
 
-    el('tbody').innerHTML = rows.map((r,i)=>`
+    el('tbody').innerHTML = rows.map(r=>`
       <tr data-id="${r.id}">
-        <td data-key="folio" class="mono">${i+1}</td>
+        <td data-key="folio" class="mono">${esc(r.folio)}</td>
         <td data-key="contenedor" class="mono"><div class="clamp2">${esc(r.contenedor)}</div></td>
         <td data-key="cuenta">${esc(r.cuenta)}</td>
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
-        <td data-key="fecha" class="mono">${fmtYMD(r.arribo_ymd)}</td>
         <td data-key="indicacion">${esc(r.indicacion)}</td>
         <td data-key="anden" class="mono">${esc(r.anden)}</td>
         <td data-key="arribo_at" class="mono">${fmtTime(r.arribo_at)}</td>
@@ -1285,17 +1268,14 @@ No se borran: quedan disponibles en Histórico por fecha.
 
     const work = getWorkDate();
     let rows = (STATE.rows || []).slice().filter(r=>isVisible(r, work));
-    // Orden cronológico: más reciente arriba
-    rows.sort((a,b)=>{
-      const ba=(b.arribo_at||'');
-      const aa=(a.arribo_at||'');
-      if(ba!==aa) return ba.localeCompare(aa);
-      const bu=(b.updated_at||b.created_at||'');
-      const au=(a.updated_at||a.created_at||'');
-      return bu.localeCompare(au);
-    });
 
-});
+    // activos primero
+    rows.sort((a,b)=>{
+      const aa = CONCLUIDOS.has(a.status) ? 1 : 0;
+      const bb = CONCLUIDOS.has(b.status) ? 1 : 0;
+      if(aa!==bb) return aa-bb;
+      return Number(a.folio)-Number(b.folio);
+    });
 
     el('adminList').innerHTML = rows.map(r=>{
       const opts = nextActions(r.status);
