--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arribos a Cedis</title>
+  <title>Arribos a Cedis — base+fecha+no</title>
   <style>
     :root{
       --bg:#0b0f14;
@@ -194,6 +194,7 @@
             <th data-key="cuenta">Cuenta</th>
             <th data-key="cedis">Cedis</th>
             <th data-key="status">Estatus</th>
+            <th data-key="fecha">Fecha</th>
             <th data-key="indicacion">Indicación</th>
             <th data-key="anden">Andén</th>
             <th data-key="arribo_at">Arribo</th>
@@ -463,6 +464,13 @@
     const day=String(d.getDate()).padStart(2,'0');
     return `${y}-${m}-${day}`;
   }
+  function fmtYMD(ymdStr){
+    if(!ymdStr) return '';
+    // acepta 'YYYY-MM-DD' o ISO
+    if(typeof ymdStr === 'string' && ymdStr.includes('T')) ymdStr = ymdStr.slice(0,10);
+    return String(ymdStr).slice(0,10).replace(/-/g,'/');
+  }
+
 
   function fmtTime(iso){
     if(!iso) return '';
@@ -680,6 +688,7 @@
     {key:'cuenta', label:'Cuenta'},
     {key:'cedis', label:'Cedis'},
     {key:'status', label:'Estatus'},
+    {key:'fecha', label:'Fecha'},
     {key:'indicacion', label:'Indicación'},
     {key:'anden', label:'Andén'},
     {key:'arribo_at', label:'Arribo'},
@@ -692,7 +701,11 @@
   function loadCols(){
     try{
       const v = JSON.parse(localStorage.getItem(LS_COLS) || 'null');
-      if(Array.isArray(v) && v.length) return v;
+      if(Array.isArray(v) && v.length){
+        // migración: agrega 'fecha' por defecto si no existe
+        if(!v.includes('fecha')) v.push('fecha');
+        return v;
+      }
     }catch{}
     const def = COLS.map(c=>c.key);
     localStorage.setItem(LS_COLS, JSON.stringify(def));
@@ -800,6 +813,8 @@
     if(row.is_deleted) return false;
     const today = ymd();
     if(work === today){
+      // Regla HOY: ocultar LIBERADO de días previos (mantener pendientes previos)
+      if(row.arribo_ymd !== work && String(row.status||'').toUpperCase()==='LIBERADO') return false;
       return row.arribo_ymd === work || !!row.is_active;
     }
     return row.arribo_ymd === work;
@@ -895,13 +910,14 @@
 
     renderKPIs(rows);
 
-    el('tbody').innerHTML = rows.map(r=>`
+    el('tbody').innerHTML = rows.map((r,i)=>`
       <tr data-id="${r.id}">
-        <td data-key="folio" class="mono">${esc(r.folio)}</td>
+        <td data-key="folio" class="mono">${i+1}</td>
         <td data-key="contenedor" class="mono"><div class="clamp2">${esc(r.contenedor)}</div></td>
         <td data-key="cuenta">${esc(r.cuenta)}</td>
         <td data-key="cedis">${esc(r.cedis)}</td>
         <td data-key="status">${statusPill(r.status)}</td>
+        <td data-key="fecha" class="mono">${fmtYMD(r.arribo_ymd)}</td>
         <td data-key="indicacion">${esc(r.indicacion)}</td>
         <td data-key="anden" class="mono">${esc(r.anden)}</td>
         <td data-key="arribo_at" class="mono">${fmtTime(r.arribo_at)}</td>
