--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
             <th data-key="responsable">Responsable</th>
             <th data-key="inicio_at">Inicio</th>
             <th data-key="fin_at">Fin</th>
+            <th data-key="cajas">Cajas</th>
+            <th data-key="tarimas">Tarimas</th>
           </tr>
         </thead>
         <tbody id="tbody"></tbody>
@@ -708,6 +710,8 @@
     {key:'responsable', label:'Responsable'},
     {key:'inicio_at', label:'Inicio'},
     {key:'fin_at', label:'Fin'},
+    {key:'cajas', label:'Cajas'},
+    {key:'tarimas', label:'Tarimas'},
   ];
 
   function loadCols(){
